--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,8 +30,8 @@ div {
   justify-content: center;
   position: relative;
   border: 1px solid white;
-  height: 600px;
-  width: 800px;
+  height: 576px;
+  width: 1024px;
 }
 
 #gameCanvas {
@@ -44,7 +44,7 @@ div {
   background: rgb(155, 12, 12);
   width: 50px;
   height: 50px;
-  z-index: 2;
+  z-index: 3;
   position: absolute;
   top: 0;
   right: 0;
@@ -57,3 +57,48 @@ div {
   background: #ccc;
   padding: 10px;
 }
+
+#interactionContainer {
+  position: absolute; 
+  bottom: 0;
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  display: none; 
+  background: 
+  rgba(255,255,255,0.7); 
+  flex-direction: row; 
+  justify-content: flex-end; 
+  align-items: flex-end;
+  z-index: 2;
+}
+
+#userInputContainer {
+  width: 33%;
+  height: 33%; 
+  border-width: 3px 0 3px 3px;
+  border-style: dashed; 
+  border-color: black"
+}
+
+#dialogueContainer {
+  width: 33%;
+  height: 33%; 
+  border-width: 3px 3px 3px 0; 
+  border-style: dashed; 
+  border-color: black;
+}
+
+#npcHeadshotContainer {
+  width: 33%; 
+  height: 33%; 
+  border-width: 3px;
+  border-style: dashed;
+  border-color: black; 
+  background: url('https://tinyurl.com/f64x4z2h') no-repeat center center; 
+  background-size: cover;
+}
+
+
+
+
