--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --interactionSubDivHeight: 100%
+}
+
 body {
   background: #000000;
   display: flex;
@@ -20,6 +24,10 @@ h1 {
 
 div {
   display: flex;
+}
+
+ul {
+  list-style: none;
 }
 
 #gameBoard {
@@ -75,7 +83,7 @@ div {
 
 #userInputContainer {
   width: 33%;
-  height: 33%; 
+  height: var(--interactionSubDivHeight);
   border-width: 3px 0 3px 3px;
   border-style: dashed; 
   border-color: black"
@@ -83,22 +91,31 @@ div {
 
 #dialogueContainer {
   width: 33%;
-  height: 33%; 
+  height: var(--interactionSubDivHeight); 
   border-width: 3px 3px 3px 0; 
   border-style: dashed; 
   border-color: black;
 }
 
-#npcHeadshotContainer {
+#npcDetailsContainer {
+  display: flex;
+  flex-direction: column;
   width: 33%; 
-  height: 33%; 
-  border-width: 3px;
-  border-style: dashed;
-  border-color: black; 
+  height: var(--interactionSubDivHeight); 
+}
+
+#npcHeadshotContainer {
   background: url('https://tinyurl.com/f64x4z2h') no-repeat center center; 
   background-size: cover;
 }
 
+#npcNameContainer, #npcBioContainer, #npcHeadshotContainer {
+  width: 100%; 
+  height: 33%;
+  border-width: 3px;
+  border-style: dashed;
+  border-color: black; 
+}
 
 
 
