--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,11 @@ ul {
   list-style: none;
 }
 
+#chatInput {
+  height: 90%;
+  width: 90%;
+}
+
 #gameBoard {
     justify-content: center;
 }
@@ -81,18 +86,26 @@ ul {
   z-index: 2;
 }
 
-#userInputContainer {
-  width: 33%;
+#userInputAndDialogueContainer {
+  width: 66.6%;
   height: var(--interactionSubDivHeight);
-  border-width: 3px 0 3px 3px;
+  display: flex;
+  flex-direction: column;
+  border-width: 3px;
   border-style: dashed; 
-  border-color: black"
+  border-color: black
 }
-
-#dialogueContainer {
-  width: 33%;
-  height: var(--interactionSubDivHeight); 
+#userInputContainer {
+  width: 100%;
+  height: 16.65%; 
   border-width: 3px 3px 3px 0; 
+  border-style: dashed; 
+  border-color: black;
+}
+#dialogueContainer {
+  width: 100%;
+  height: 83.35%; 
+  border-width: 3px ; 
   border-style: dashed; 
   border-color: black;
 }
@@ -100,22 +113,29 @@ ul {
 #npcDetailsContainer {
   display: flex;
   flex-direction: column;
-  width: 33%; 
+  width: 33.3%; 
   height: var(--interactionSubDivHeight); 
 }
-
 #npcHeadshotContainer {
   background: url('https://tinyurl.com/f64x4z2h') no-repeat center center; 
   background-size: cover;
 }
-
 #npcNameContainer, #npcBioContainer, #npcHeadshotContainer {
   width: 100%; 
-  height: 33%;
   border-width: 3px;
   border-style: dashed;
   border-color: black; 
 }
+#npcNameContainer {
+  height: 16.65%
+}
+#npcHeadshotContainer {
+  height: 49.95%;
+}
+#npcBioContainer {
+  height: 33.3%
+}
+
 
 
 
