populated npcDetails container with imageplaceholder and actual name and bio. Created function to make request object for chat prompt

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,7 +117,7 @@ ul {
   height: var(--interactionSubDivHeight); 
 }
 #npcHeadshotContainer {
-  background: url('https://tinyurl.com/f64x4z2h') no-repeat center center; 
+  background: no-repeat center center; 
   background-size: cover;
 }
 #npcNameContainer, #npcBioContainer, #npcHeadshotContainer {
