--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,53 +1,51 @@
 body {
-    position: relative;
-    margin: 0;
-    padding: 0;
-    height: 200vh;
-    width: 100%;
+    background: #000000;
     display: flex;
-    /* align-items: flex-end; */
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-image: url('../images/spaceBackground.png');
-    background-repeat: repeat;
     background-size: cover;
 }
 
+header {
+    display: flex;
+    justify-content: center;
+}
+
 h1 {
-    position: absolute;
-    top: 10%; /* Adjust as needed */
-    left: 50%;
-    transform: translate(-50%, -50%);
     font-family: 'Darumadrop One', cursive;
     color: white;
     font-size: 100px;
+    margin: 30px
 }
 
 #handheldNintendoContainer {
-    top: 800px;
-    /* margin: 500px; */
     position: relative;
-    display: flex;
-    justify-content: flex-end;
-}
+    background-image: url('../images/handheldNintendo.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width:50vw;
+    height:37.81vw;
+    margin-bottom: 50px;
 
-#handheldNintendo {
-    display: block;
-    width: 900px; /* Adjust as needed */
-}
-
-#startGame, #info {
-    position: absolute;
-    /* Adjust the top and left values as needed to position your buttons */
 }
 
 #info {
-    top: 50%; 
-    left: 60%;
+    /* border: solid 3px blue; */
+    position: absolute;
+    bottom: 14%;
+    right: 16.5%;
+    width: 11%;
+    height: 5.5%;
 }
 
 #startGame {
-    top: 50%; 
-    left: 50%;
+    /* border: solid 3px blue; */
+    position: absolute;
+    bottom: 14%;
+    right: 28.5%;
+    width: 11%;
+    height: 5.5%;
 }
 
 #login {
