info button working

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -30,6 +30,18 @@ h1 {
 
 }
 
+#infoGraphic {
+    /* border: solid 3px blue; */
+    background-image: url(../images/gameInfo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    border-radius: 10px;
+    width: 56.5%;
+    height: 40.5%;
+    top: 13.5%;
+    left: 21%;
+}
 #info {
     /* border: solid 3px blue; */
     position: absolute;
@@ -37,6 +49,7 @@ h1 {
     right: 16.5%;
     width: 11%;
     height: 5.5%;
+    cursor: pointer;
 }
 
 #startGame {
