styled NPC interactions

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,7 +13,7 @@ header {
 }
 
 h1 {
-    font-family: 'Darumadrop One', cursive;
+    font-family: 'VT323', monospace;
     color: white;
     font-size: 100px;
     margin: 30px
