--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
     position: absolute;
-    font-family: 'Darumadrop One', cursive;
+    font-family: 'VT323', monospace;
 }
 
 h1, h2, label {
