--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,33 +2,27 @@
   --interactionSubDivHeight: 100%
 }
 
-@font-face {
-  font-family: 'Press Start 2P';
-  src: url('PressStart2P-Regular.woff2') format('woff2'),
-    url('PressStart2P-Regular.woff') format('woff');
-  font-style: normal;
-  font-display: swap;
-}
-
 body {
+  font-family: 'VT323', monospace;
   background: #000000;
   display: flex;
   flex-direction: column;
-  font-family: 'Press Start 2P', monospace;
+  align-items: center;
+  background-image: url('../images/spaceBackground.png');
+  background-size: cover;
 }
 
 header {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  color: azure;
-  font-family: 'Darumadrop One', cursive;
-  font-size: xx-large;
-
 }
 
 h1 {
-  margin: 3px;
+  font-family: 'VT323', monospace;
+  color: white;
+  font-size: 100px;
+  margin: 30px
 }
 
 div {
@@ -119,6 +113,9 @@ ul {
   border-width: 3px 3px 3px 0; 
   border-style: dashed; 
   border-color: black;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 #dialogueContainer {
   width: 100%;
@@ -126,6 +123,8 @@ ul {
   border-width: 3px ; 
   border-style: dashed; 
   border-color: black;
+  font-size: 20px;
+  line-height: 21px;
 }
 
 #npcDetailsContainer {
@@ -145,14 +144,18 @@ ul {
   border-color: black; 
 }
 #npcNameContainer {
-  height: 16.65%
+  height: 16.65%;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  font-weight: 900;
 }
 #npcHeadshotContainer {
   height: 49.95%;
 }
 #npcBioContainer {
   height: 33.3%;
-  font-size: 12px;
+  font-size: 19px;
 }
 
 
