--- a/public/css/game.css
+++ b/public/css/game.css
@@ -83,6 +83,27 @@ ul {
   padding: 10px;
 }
 
+#inventory-header {
+  margin: 0 auto;
+}
+
+#inventory-container {
+  position: absolute; 
+  bottom: 0;
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  display: none; 
+  background: 
+  rgba(255,255,255,0.7); 
+  flex-direction: column; 
+  /* justify-content: flex-end;  */
+  /* align-items: flex-end; */
+  z-index: 2;
+  font-size: 25px;
+}
+
+
 #interactionContainer {
   position: absolute; 
   bottom: 0;
